source/css/scss/objects/_buttons.scss
/*------------------------------------*\
    $BUTTONS
\*------------------------------------*/
.a-btn {
  @extend .a-fontSizeS;
  @include a-fontReg;

  position: relative;
  display: inline-block;
  padding: 6px $spacer * 2 4px $spacer * 2;
  margin-bottom: $spacer;
  color: $black;
  cursor: pointer;
  background: $blue;
  border: none;

  &:hover {
    color: $black;
    text-decoration: none;
    background: $blue-hover-color;
    border: none;
  }

  &:focus {
    color: $black;
    text-decoration: none;
    background: $blue-hover-color;
    border-bottom: none;
    outline: 0;
  }

  &:active,
  &.active {
    color: $black;
    background: $blue;
    background-image: none;
    outline: 0;
  }

  &.disabled,
  &:disabled {
    @include box-shadow( none );

    color: $black;
    cursor: $cursor-disabled;
    background-color: $grey-light;
    box-shadow: 0 0 0 1px $white;
  }

  &::after {
    position: absolute;
    top: -6px;
    left: 0;
    width: 100%;
    height: $spacer * 4;
    // Making the touch target area bigger without affecting the layout
    content: '';
  }

  &::before {
    position: absolute;
    top: 0;
    left: 0;
    width: auto;
    min-height: auto;
    content: '';
  }

  // Large btn with border
  &.a-btn-border {
    @extend .a-fontSizeXXL;
    @include a-fontMedium;

    padding: 8px $spacer * 2 4px $spacer * 2;
    color: $blue-darker;
    background: transparent;
    border: 2px solid $blue-darker;

    &:hover,
    &:focus {
      color: $blue-darker;
      background: $blue-darker-opacity;
    }
  }
}

.a-btn-secondary {
  background-color: $white;

  &:hover {
    background: $grey-light;
  }
}

.a-btn-success {
  color: $black;
  background-color: $green;

  &:hover {
    background: $green-hover-color;
    border: none;
  }

  &:active,
  &.active {
    background: $green;
  }

  &:focus {
    background: $green-hover-color;
  }

  &.disabled,
  &:disabled {
    @include box-shadow( none );

    color: $black;
    cursor: $cursor-disabled;
    background-color: $grey-light;
    box-shadow: 0 0 0 1px $white;
  }
}

.a-btn-danger {
  background-color: $red;

  &:hover {
    background: $red-hover-color;
    border: none;
  }

  &:active,
  &.active {
    background: $red-hover-color;
  }

  &:focus {
    background: $red-hover-color;
  }
}



// BTN WITH ICON
.a-btn-icon {
  width: 100%;
  height: $spacer * 5;
  text-align: left;
  background: transparent;

  &:hover,
  &:focus {
    color: $blue;
    background: transparent;
	}

  .a-btn-icon-symbol {
    // @include a-fontSize22;

    width: $spacer * 3;
    height: $spacer * 3;
    padding: 0;
    color: $white;
    background: $blue;
    border-radius: 50px;
    justify-content: center;
	}
}

.a-btn-icon-transparant {
  background: transparent;

  &:hover,
  &:focus {
    color: $blue;
    background: transparent;
	}
}

// BTN WITH WHITE TRANSPARENCY

.a-btn-transparentWhite {
  padding: $spacer;
  background: $white-opacity-05;

  &:hover,
  &:focus {
    color: $black;
    background: $white;
  }

  .a-btn-icon-symbol {
    // @include a-fontSize18;
    display: inline-flex;
    width: $spacer * 3;
    height: $spacer * 3;
    padding: 0;
    color: $white;
    background: $blue;
    border-radius: 50px;
    justify-content: center;

    &::before {
      align-self: center;
    }
  }

  .a-btn-icon-text {
    padding-left: $spacer / 2;
  }
}

.a-btn-transparentWhite-active {
  color: $white;
  background: $blue;

  .a-btn-icon-symbol {
    color: $blue;
    background: $white;
  }

  &:hover {
    @extend .a-btn-transparentWhite-active;
  }
}

// BTN WITH SHADOW
.a-btn-shadow {
  background: $blue-light;
  box-shadow: $shadow;

  &:hover,
  &:focus {
    color: $black;
    background: darken( $blue-light, 5% );
  }

  &.a-bgGreyLight {
    &:focus,
    &:hover {
      background: darken( $grey-light, 5% );
    }
  }

  .a-label {
    margin-top: -1px;
    margin-left: $spacer;
  }
}

// Make button look like link
.a-btn-link {
  @extend .a-fontSizeXS;
  @include a-fontReg;
  padding: 0;
  line-height: 1.2;
  text-align: left;
  background: none;
  border: none;
  border-bottom: 2px solid $link-color;
  box-shadow: none;
}

// add btn
.a-btn-action {
  padding: $spacer / 3 $spacer * 2 $spacer / 3 $spacer;
  color: $black;
  text-align: left;
  vertical-align: middle;
  background-color: transparent;
  border: 2px dotted $blue;

  align-items: center;

  &:hover,
  &:focus {
    color: $black;
    background: $blue-light;
    border: 2px dotted $blue;
  }
}

// BOX BUTTON
.a-box-button {
  position: relative;
  width: 100%;
  height: 190px;
  padding: 15px 4px; // give space to hover border
  cursor: pointer;
  background: $white;
  border: 1px solid $grey-medium;

  &[data-target] {
    i,
    .a-box-button-action {
      color: $grey;
    }
  }

  .a-childBoxButtonList & {
    background-color: $grey-light;
  }

  .a-box-button-text {
    @include media-breakpoint-up( sm ) {
      height: 55px;
      overflow: hidden;
    }
  }

  p {
    margin-bottom: 0;
  }

  .a-box-button-icon {
    @include a-fontSize60;

    display: block;
  }

  .a-box-button-info {
    @include a-fontSize20;
    @include a-fontBold;

    display: table;
    width: auto;
    padding: 8px $spacer 4px $spacer;
    margin: $spacer auto $spacer auto;
    clear: both;
    font-style: normal;
    color: $black;
    text-align: center;
    background:  $grey-light;
    border-radius: 50px;
  }

  .a-box-button-action {
    @extend .a-fontSizeXXS;
    @include a-fontBold;

    display: inline-block;
  }

  .a-box-button-action-arrow {
    @extend .a-fontSizeXS;
  }

  .a-box-button-secondaryAction {
    display: none;
  }

  &.a-open {
    .a-box-button-primaryAction {
      display: none;
    }

    .a-box-button-secondaryAction {
      display: inline-block;
    }
  }

  &:hover {
    padding: $spacer 0; // give space to hover border
    background: $white-opacity-05;
    border: 4px solid $blue !important;

    .a-box-button-info {
      background: $white;
    }
  }

  .a-meta-text {
    @extend .a-fontSizeXXXXS;
    min-height: 20px;
  }

  .a-box-button-name {
    @extend .a-fontSizeXXS;

    display: block;
    height: 40px;
    overflow-y: hidden;
    text-transform: uppercase;
  }

  &:focus {
    background: $blue-light;
  }
}

// BOX ADD BUTTON
.a-boxAddBtn {
  width: 100%;
  padding: $spacer;
  cursor: pointer;
  background: transparent;
  border: none;

  &:focus,
  &:hover {
    .a-boxAddBtn-inner {
      background: $white-opacity-05;
    }
  }

  .a-boxAddBtn-inner {
    display: block;
    height: 160px;
    padding-top: $spacer * 1.5;
    background-color: transparent;
    border: 2px dotted $blue;

    .a-boxAddBtn-icon {
      @include a-fontSize24;

      display: block;
      padding: $spacer * 2;
    }
  }

  .a-box-button-icon {
    @include a-fontSize60;

    display: block;
  }
}

// FULL WIDTH ADD BUTTON
.a-fullWidthBtn {
  @include a-fontBold;

  width: 100%;
  min-height: $spacer * 4;

  span {
    display: inline-block;
    width: 70%;
    height: 100%;
    margin-left: $spacer;
    vertical-align: middle;

    @include media-breakpoint-up( sm ) {
      margin-left: $spacer * 2;
    }
  }
}



// SWITCH ACTION (RADIO) BUTTON
.switch-container {
  width: 100%;
  height: $spacer * 3;
  border: 2px solid $blue;

  .radio {
    position: relative;
    width: 50%;
    height: 100%;

    &:first-of-type {
      float: left;
    }

    &:last-of-type {
      float: right;
    }

    input {
      display: none;

      &[type='radio'] {
        &:checked+label {
          background-color: $blue;
        }

        &:not(:checked)+label {
          &:hover {
            background-color: $blue-light;
          }
        }
      }
    }

    label {
      display: block;
      width: 100%;
      height: 100%;
      line-height: $spacer * 3-4px;
      text-align: center;
      cursor: pointer;
      background-color: transparent;
    }
  }
}

// Buttons groups
.a-btn-group {
  a,
  button {
    margin-right: $spacer;

    &:last-child {
      margin-right: 0;
    }

    &.a-btn-link {
      display: inline;
      padding-bottom: 0;
      margin-bottom: $spacer;
      line-height: 1.2;
    }
  }

  a {
    &:not(.a-btn) {
      display: inline;
      padding-bottom: 2px;
      margin-bottom: $spacer;
    }
  }

  &.a-btn-group-exLinks {
    a,
    button {
      margin-right: $spacer * 3;
      margin-bottom: $spacer;
    }
  }
}

.a-btn-blue-noUnderline {
  color: $blue-dark;
  border: none;

  &:hover,
  &:focus {
    color: $blue;
    border: none;
  }
}

// No style
.a-btn-noStyle {
  padding: 0;
  margin: 0;
  color: $white;
  background: none;
  border: none;
}

